hide overflow to avoid resizing for long names

--- a/src/media_vault/static/style.css
+++ b/src/media_vault/static/style.css
@@ -191,6 +191,7 @@ a.content-previous:hover, a.content-next:hover {
     border-radius: 0.5rem;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 #thumb-wrapper .thumb.lazy-thumb {
